--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title Hola Mundo/title>
+<title> Hola Mundo</title>
 </head>
 <body>
-<h1>Hola Mundo>
+<h1>Hola Mundo/h1>
 </body>
 </html>
